@@ -17,6 +17,7 @@ cpp += rtfhtml.cpp
 
 cpp += gbfstrongs.cpp
 cpp += gbffootnotes.cpp
+cpp += gbfheadings.cpp
 cpp += plainfootnotes.cpp
 
 cpp += gbfthml.cpp
